test/Runner/errors/tests/MI/Seed/Test.seedconf1.js
eve("Suite", () => {
	seed('Seed', () => {

	}, { a: lol });
});